--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
+		"drizzle-kit": "^0.19.11",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -42,6 +43,12 @@
 	"type": "module",
 	"dependencies": {
 		"@melt-ui/svelte": "^0.22.0",
-		"lucide-svelte": "^0.262.0"
+		"@neondatabase/serverless": "^0.5.6",
+		"@supabase/auth-helpers-sveltekit": "^0.9.4",
+		"@supabase/supabase-js": "^2.29.0",
+		"@sveltejs/adapter-vercel": "^3.0.2",
+		"drizzle-orm": "^0.27.2",
+		"lucide-svelte": "^0.262.0",
+		"svelte-autoresize-textarea": "^0.0.6"
 	}
 }
