--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"migrations": "npx drizzle-kit generate:pg"
 	},
 	"devDependencies": {
 		"@melt-ui/pp": "^0.0.5",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/bcrypt": "^5.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -34,11 +36,13 @@
 		"svelte-check": "^3.4.3",
 		"svelte-dnd-action": "^0.9.24",
 		"svelte-sequential-preprocessor": "^2.0.1",
+		"sveltekit-superforms": "^1.5.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
-		"vitest": "^0.32.2"
+		"vitest": "^0.32.2",
+		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -47,6 +51,10 @@
 		"@supabase/auth-helpers-sveltekit": "^0.9.4",
 		"@supabase/supabase-js": "^2.29.0",
 		"@sveltejs/adapter-vercel": "^3.0.2",
+		"@upstash/qstash": "^0.3.6",
+		"@upstash/redis": "^1.22.0",
+		"bcrypt": "^5.1.0",
+		"dotenv": "^16.3.1",
 		"drizzle-orm": "^0.27.2",
 		"lucide-svelte": "^0.262.0",
 		"svelte-autoresize-textarea": "^0.0.6"
