--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"migrations": "npx drizzle-kit generate:pg"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.0.2",
 		"@melt-ui/pp": "^0.0.5",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -57,6 +58,8 @@
 		"dotenv": "^16.3.1",
 		"drizzle-orm": "^0.27.2",
 		"lucide-svelte": "^0.262.0",
-		"svelte-autoresize-textarea": "^0.0.6"
+		"resend": "^0.17.2",
+		"svelte-autoresize-textarea": "^0.0.6",
+		"svelte-email": "^0.0.4"
 	}
 }
