drizzle planetscale lucia user posts

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
-		"@types/bcrypt": "^5.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -48,22 +47,18 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@clerk/clerk-sdk-node": "^4.12.2",
 		"@lucia-auth/adapter-mysql": "^2.0.0",
-		"@melt-ui/svelte": "^0.22.0",
-		"@neondatabase/serverless": "^0.5.6",
+		"@melt-ui/svelte": "^0.22.2",
 		"@planetscale/database": "^1.10.0",
-		"@supabase/auth-helpers-sveltekit": "^0.9.4",
-		"@supabase/supabase-js": "^2.29.0",
 		"@sveltejs/adapter-vercel": "^3.0.2",
 		"@upstash/qstash": "^0.3.6",
 		"@upstash/redis": "^1.22.0",
-		"bcrypt": "^5.1.0",
-		"dotenv": "^16.3.1",
+		"cloudinary": "^1.40.0",
 		"drizzle-orm": "^0.27.2",
 		"lucia": "^2.0.0",
 		"lucia-auth": "^1.8.0",
 		"lucide-svelte": "^0.262.0",
+		"nanoid": "^4.0.2",
 		"resend": "^0.17.2",
 		"svelte-autoresize-textarea": "^0.0.6",
 		"svelte-email": "^0.0.4"
