--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"svelte-check": "^3.4.3",
 		"svelte-dnd-action": "^0.9.24",
 		"svelte-sequential-preprocessor": "^2.0.1",
+		"sveltekit-flash-message": "^2.1.0",
 		"sveltekit-superforms": "^1.5.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
@@ -62,6 +63,7 @@
 		"resend": "^0.17.2",
 		"svelte-autoresize-textarea": "^0.0.6",
 		"svelte-email": "^0.0.4",
+		"svelte-french-toast": "^1.2.0",
 		"svelte-img-previewer": "^0.0.1"
 	}
 }
