--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/kit": "^1.20.4",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.14",
 		"drizzle-kit": "^0.19.11",
 		"eslint": "^8.28.0",
